--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -1,3 +1,16 @@
+  <li>
+    <a href="https://orcid.org/0000-0001-9522-3132" itemprop="sameAs">
+      <i class="ai ai-orcid-square ai-fw"></i> ORCID
+    </a>
+  </li>
+
+
+  <li>
+    <a href="https://scholar.google.com/citations?user=Hrecu-gAAAAJ&hl=it" itemprop="sameAs">
+      <i class="ai ai-google-scholar"></i> Google Scholar
+    </a>
+  </li>
+
 <!--
   <li>
     <a href="http://link-to-whatever-social-network.com/user/" itemprop="sameAs" rel="nofollow noopener noreferrer me">
